k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-jquery1-svc
  namespace: jquery1
spec:
  selector: 
    app: jquery1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
 # type: LoadBalancer
