k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: jquery1-ingress
 namespace: jquery1
 annotations:
   kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host: dev-jquery1.lreddy.xyz
   http:
     paths:
     - path:
       backend:
         serviceName: k8s-jquery1-svc
         servicePort: 80
